# bbs-client-cli

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TODO.md  setup.sh
src/: CMakeLists.txt  client.c  client.h  common.h  connection.c  connection.h  deps.mk  draw-modal.h  draw_modal.c  file_processor.c  file_processor.h  fs.c  fs.h  main.c  main.h  modal.c  modal.h  query.c  query.h  server.c  server.h  ui.c  ui.h
src/lib/: CMakeLists.txt
src/lib/bstring/: CMakeLists.txt
src/modals/: CMakeLists.txt  alert.c  alert.h  ask_server_addr.c  ask_server_addr.h  download_pr.c  download_pr.h  login_credentials.c  login_credentials.h  login_option.c  login_option.h  notification.c  notification.h  register.c  register.h  server_message.c  server_message.h  upload_dialogue.c  upload_dialogue.h  upload_props_dialogue.c  upload_props_dialogue.h
src/ui/: app.c  app.h  widget.c  widget.h
src/ui-widget-core/: CMakeLists.txt  ui-widget-core.c
src/ui/modals/: ask_server_addr.c  ask_server_addr.h  download_pr.c  download_pr.h  login.c  login.h  login_credentials.c  login_credentials.h  login_option.c  login_option.h  notification.c  notification.h  server_message.c  server_message.h  upload_dialogue.c  upload_dialogue.h  upload_props_dialogue.c  upload_props_dialogue.h
src/ui/widget/: button.c  button.h  dialogue.c  dialogue.h  file_list.c  file_list.h  fs_file_list.c  fs_file_list.h  group.c  group.h  input.c  input.h  progress_bar.c  progress_bar.h
src/widget/: CMakeLists.txt  app.c  app.h  button.c  button.h  dialogue.c  dialogue.h  file_list.c  file_list.h  fs_file_list.c  fs_file_list.h  group.c  group.h  input.c  input.h  progress_bar.c  progress_bar.h  widget.h
src/widget_core/: CMakeLists.txt  widget_core.c  widget_core.h
